--- a/src/pages/Check/Workshop/Review/index.module.less
+++ b/src/pages/Check/Workshop/Review/index.module.less
@@ -1,10 +1,6 @@
 .stepHeader {
   background-color: #fff;
   margin-bottom: 10px;
-  .upHeader {
-    border-bottom: 1px solid #f0f0f0;
-    padding: 12px;
-  }
 }
 .stepContent {
   background-color: #fff;
@@ -20,6 +16,7 @@
     .ant-btn {
       float: right;
       top: -5px;
+      margin-left: 20px;
     }
   }
 }
