--- a/src/pages/Check/Workshop/Review/steps/rintro.module.less
+++ b/src/pages/Check/Workshop/Review/steps/rintro.module.less
@@ -1,3 +1,9 @@
+.content {
+  height: 100%;
+  :global(.dsTree) {
+    height: 100%;
+  }
+}
 .subTitle {
   padding: 17px 24px;
   background-color: #fafafa;
