--- a/src/style/tree.less
+++ b/src/style/tree.less
@@ -31,6 +31,7 @@
     background-size: 113px;
     width: 24px;
     height: 24px;
+    flex: 0 0 24px;
   }
 
   .rc-tree .rc-tree-treenode span.rc-tree-switcher.rc-tree-switcher_open {
@@ -116,6 +117,10 @@
 
   .rc-tree .rc-tree-treenode span.rc-tree-iconEle {
     display: none;
+  }
+  .rc-tree .rc-tree-treenode span.rc-tree-iconEle.rc-tree-icon_loading {
+    display: inline-block;
+    vertical-align: sub;
   }
 
   // draggble
