--- a/src/global.less
+++ b/src/global.less
@@ -1,4 +1,5 @@
-@import 'antd/dist/antd.less';
+@import 'antd/dist/antd.css';
+
 @import 'rc-tree/assets/index.less';
 @import './style/tree.less';
 
@@ -14,6 +15,12 @@
   padding: 0 5px;
   margin-left: 6px;
   color: #272727;
+}
+.ds-pop.ant-popover-disabled-compatible-wrapper {
+  pointer-events: none;
+}
+.ds-right {
+  float: right;
 }
 
 .ds-green-btn.ant-btn-primary {
