--- a/src/pages/Check/Workshop/Review/steps/checkin.module.less
+++ b/src/pages/Check/Workshop/Review/steps/checkin.module.less
@@ -1,9 +1,19 @@
-.signContent {
+.checkContent {
   padding: 24px;
   overflow: auto;
-  .signPic {
+  .checkPic {
     background: #ecf6ff;
     padding: 19px 24px;
     margin-bottom: 16px;
+  }
+}
+.checkText {
+  display: inline-block;
+  vertical-align: bottom;
+  margin-left: 14px;
+  .upText {
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 12px;
   }
 }
