--- a/src/style/tree.less
+++ b/src/style/tree.less
@@ -149,6 +149,12 @@
       background-position: 0 -20px;
     }
   }
+  .ds-coverOpe {
+    background-position: 0 -80px;
+    &:hover {
+      background-position: -24px -80px;
+    }
+  }
   .ds-addOpe {
     background-position: -24px 0;
     &:hover {
