--- a/src/pages/Check/Workshop/Review/index.module.less
+++ b/src/pages/Check/Workshop/Review/index.module.less
@@ -55,3 +55,27 @@
     background: #fafafa;
   }
 }
+
+.freezeModal {
+  font-size: 20px;
+  font-weight: bold;
+  :global {
+    .ant-modal-content {
+      box-shadow: none;
+      background: transparent;
+    }
+    .anticon.anticon-lock {
+      margin-bottom: 10px;
+      font-size: 36px;
+      background: #1890ff;
+      color: #fff;
+      padding: 10px;
+      border-radius: 50%;
+    }
+  }
+  .freezeContent {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+  }
+}
