--- a/src/pages/Struct/Construct/Tree/index.module.less
+++ b/src/pages/Struct/Construct/Tree/index.module.less
@@ -2,6 +2,8 @@
   flex: 0 0 56px;
   border-bottom: 1px solid #d9d9d9;
   padding: 10px 20px;
+  white-space: nowrap;
+  overflow: auto;
   :global {
     .ant-btn {
       margin-right: 10px;
