--- a/src/Layouts/BasicLayout/index.module.less
+++ b/src/Layouts/BasicLayout/index.module.less
@@ -3,5 +3,9 @@
     .ant-pro-global-header-logo a h1 {
       color: rgb(0 0 0 / 85%);
     }
+    .ant-menu-sub.ant-menu-inline > .ant-menu-item,
+    .ant-menu-sub.ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title {
+      padding-left: 50px !important;
+    }
   }
 }
