--- a/src/global.less
+++ b/src/global.less
@@ -22,6 +22,20 @@
 .ds-right {
   float: right;
 }
+.ds-back-title {
+  font-size: 16px;
+  color: #000;
+  font-weight: 500;
+  .anticon {
+    cursor: pointer;
+    display: inline-block;
+    line-height: 42px;
+    padding-right: 10px;
+    &:hover {
+      color: #1890ff;
+    }
+  }
+}
 
 .ds-green-btn.ant-btn-primary {
   border-color: #348d50;
