--- a/src/global.less
+++ b/src/global.less
@@ -36,6 +36,9 @@
     }
   }
 }
+.ds-partial-modal.ant-modal-wrap {
+  position: absolute;
+}
 
 .ds-green-btn.ant-btn-primary {
   border-color: #348d50;
