--- a/src/pages/Check/Workshop/Review/steps/Attr/index.module.less
+++ b/src/pages/Check/Workshop/Review/steps/Attr/index.module.less
@@ -7,8 +7,8 @@
     .anticon {
       cursor: pointer;
       display: inline-block;
-      line-height: 56px;
-      padding-right: 10px;
+      line-height: 1;
+      padding: 20px 10px 0px 0;
       &:hover {
         color: #1890ff;
       }
