--- a/src/style/tree.less
+++ b/src/style/tree.less
@@ -254,3 +254,15 @@
   margin-right: 5px;
   color: #ffaf5d;
 }
+.ds-tree-title-delete {
+  background: #fbeae5;
+  border: 1px solid #ea8468;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 18px;
+  border-radius: 2px;
+  margin-right: 5px;
+  color: #e45730;
+}
