--- a/src/Layouts/UserLayout/index.module.less
+++ b/src/Layouts/UserLayout/index.module.less
@@ -1,7 +1,7 @@
 .container {
   background: #464a54;
   display: flex;
-  min-height: 100vh;
+  min-height: calc(100vh - 56px);
   align-items: center;
   justify-content: center;
   .content {
