新增评审tool中人员的提示&联系方式功能

--- a/src/global.less
+++ b/src/global.less
@@ -6,6 +6,18 @@
 // :root {
 
 // }
+// ::-webkit-scrollbar {
+//   width: 3px;
+//   height: 3px;
+// }
+// ::-webkit-scrollbar-thumb {
+//   background-color: rgba(0, 0, 0, 0.3);
+//   border-radius: 1em;
+// }
+// ::-webkit-scrollbar-track {
+//   background-color: rgba(0, 0, 0, 0.1);
+//   border-radius: 1em;
+// }
 .ds-version {
   display: inline-block;
   background: linear-gradient(180deg, #eee 0%, #d8d8d8 100%);
