--- a/src/pages/Check/Workshop/Review/steps/Vote/index.module.less
+++ b/src/pages/Check/Workshop/Review/steps/Vote/index.module.less
@@ -160,6 +160,9 @@
 
 .reviewDownVote {
   padding: 20px;
+  :global(.ant-progress-text) {
+    display: none;
+  }
   .td1 {
     display: flex;
     white-space: nowrap;
