--- a/src/pages/Check/Workshop/Review/Online/index.module.less
+++ b/src/pages/Check/Workshop/Review/Online/index.module.less
@@ -2,7 +2,7 @@
   background: #f4f4f4;
   padding: 10px 22px;
   display: flex;
-  gap: 20px;
+  gap: 16px;
 }
 .online {
   position: relative;
@@ -42,5 +42,16 @@
       color: #fff;
       padding: 4px 10px;
     }
+  }
+}
+.upTextTitle {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+.buttons {
+  margin-top: 20px;
+  text-align: right;
+  :global(.ant-btn) {
+    margin-left: 10px;
   }
 }
