--- a/src/pages/Check/Workshop/Review/Record/index.module.less
+++ b/src/pages/Check/Workshop/Review/Record/index.module.less
@@ -20,6 +20,7 @@
   white-space: nowrap;
 }
 .ope {
+  flex: 1;
   display: flex;
   flex-direction: column;
   padding-left: 10px;
@@ -53,6 +54,40 @@
       .delete_tag {
         background-position: -72px -59px;
       }
+    }
+  }
+}
+
+.objectionModal {
+  width: 350px;
+  padding: 4px;
+  overflow: hidden;
+  .titleWrap {
+    display: flex;
+    :global {
+      .anticon {
+        color: #faad14;
+        font-size: 20px;
+        padding: 2px 10px 0 0;
+      }
+    }
+  }
+  .title {
+    margin-bottom: 4px;
+    font-size: 16px;
+    color: #000;
+  }
+  .objectionLabel {
+    background-color: #ff00000d;
+    color: red;
+    margin: 10px 0 16px;
+    padding: 6px;
+    font-size: 13px;
+  }
+  .buttons {
+    text-align: right;
+    :global(.ant-btn) {
+      margin-left: 5px;
     }
   }
 }
