--- a/src/style/tree.less
+++ b/src/style/tree.less
@@ -349,3 +349,22 @@
   margin: 0 5px;
   white-space: nowrap;
 }
+
+// 异议
+.ds-objectionOpe {
+  margin: 4px;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background-image: url('@/assets/tree.png');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: 113px;
+  vertical-align: text-bottom;
+  cursor: pointer;
+  transform: scale(1.3);
+  background-position: -49px -80px;
+  &:hover {
+    background-position: -73px -80px;
+  }
+}
